@@ -1,3 +1,12 @@
+2025-05-26T00:57:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15243877075 # 655
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-26
+* notice: last 14d: unq all: 3 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 541 934 / 554 947
+* notice: next accum: outdated-unq outdated-all / unq all: 541 934 / 555 948
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-05-25]
+
 2025-05-25T01:00:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15232654987 # 654
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-25
